--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@slipmatio" />
     <meta name="twitter:creator" content="@uninen" />
-    <meta name="twitter:image" content="/static/slipmat-labs-v0.jpg" />
+    <meta name="twitter:image" content="/slipmat-labs-v0.jpg" />
 
     <meta property="og:title" content="Slipmat Labs" />
-    <meta property="og:image" content="/static/slipmat-labs-v0.jpg" />
+    <meta property="og:image" content="/slipmat-labs-v0.jpg" />
     <meta property="og:description" content="Experimental Slipat.io projects." />
 
     <link rel="icon" href="https://slipmatmedia.b-cdn.net/img/favicons/favicon.ico" />
@@ -23,19 +23,15 @@
       src="https://plausible.io/js/plausible.js"
     ></script>
 
-    {% if DEBUG %}
-    <script type="module" src="http://localhost:3000/@vite/client"></script>
-    <script type="module" src="http://localhost:3000/src/main.js"></script>
-    {% endif %}
-    <link href="/static/main.ba034bbe.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/base.postcss" type="text/css" />
   </head>
   <body class="w-full h-screen">
     <div
-      class="flex flex-col items-center min-h-screen py-6 text-gray-900  bg-gradient-to-b from-indigo-300 to-purple-400 sm:py-12"
+      class="flex flex-col items-center min-h-screen py-6 text-gray-900 bg-gradient-to-b from-indigo-300 to-purple-400 sm:py-12"
     >
       <div class="max-w-lg px-8 py-8 bg-white rounded-sm shadow-md">
         <div class="flex flex-row items-center mb-6">
-          <img src="/static/slipmat_logo_v3.png" class="w-10 h-10" alt="" />
+          <img src="/slipmat_logo_v3.png" class="w-10 h-10" alt="" />
           <h1 class="flex ml-2 text-3xl font-semibold text-gray-800">Slipmat Labs</h1>
         </div>
 
@@ -80,15 +76,6 @@
         </p>
 
         <ul class="mt-4 list-disc list-inside">
-          {#
-          <li>
-            <a href="https://slipmat.io/api/" class="text-indigo-600 underline hover:no-underline"
-              >Slipmat.io API</a
-            >
-            - Access all Slipmat functionality
-          </li>
-          #}
-
           <li>
             <a
               href="https://discogs-api.labs.slipmat.io/"
@@ -131,7 +118,7 @@
               href="https://gitlab.com/slipmatio/slipmat3-devdocs/"
               class="text-indigo-600 underline hover:no-underline"
               >code</a
-            >) - public documentation for the work ttowards Next Generation Slipmat
+            >) - public documentation for the Next Generation Slipmat
           </li>
           <li>
             <a
@@ -152,7 +139,7 @@
               >@slipmatio/ui</a
             >
             (<a
-              href="https://gitlab.com/slipmatio/ui"
+              href="https://github.com/slipmatio/ui"
               class="text-indigo-600 underline hover:no-underline"
               >code</a
             >) - Slipmat v3 UI library (Vue 3 / TypeScript / Tailwind CSS)
@@ -161,7 +148,7 @@
 
         <div class="mt-10 text-center text-gray-600">
           <p class="text-lg">
-            <a class="underline" href="https://slipmat.io">Slipmat.io</a> Labs v{{ version }}
+            <a class="underline" href="https://slipmat.io">Slipmat.io</a> Labs v0.3.0
           </p>
           <p>
             Made for the DJ community with <span class="text-red-500">❤️</span> by
