--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta property="og:title" content="Slipmat Labs" />
     <meta property="og:image" content="/slipmat-labs-v0.jpg" />
-    <meta property="og:description" content="Experimental Slipat.io projects." />
+    <meta property="og:description" content="Experimental Slipmat.io projects." />
 
     <link rel="icon" href="https://slipmatmedia.b-cdn.net/img/favicons/favicon.ico" />
     <script
