chore: rename postcss to css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       src="https://plausible.io/js/plausible.js"
     ></script>
 
-    <link rel="stylesheet" href="/base.postcss" type="text/css" />
+    <link rel="stylesheet" href="/base.css" type="text/css" />
   </head>
   <body class="w-full h-screen">
     <div
