chore: bump tailwind to v4

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   </head>
   <body class="w-full h-screen">
     <div
-      class="flex flex-col items-center min-h-screen py-6 text-gray-900 bg-gradient-to-b from-indigo-300 to-purple-400 sm:py-12"
+      class="flex flex-col items-center min-h-screen py-6 text-gray-900 bg-linear-to-b from-indigo-300 to-purple-400 sm:py-12"
     >
-      <div class="max-w-lg px-8 py-8 bg-white rounded-sm shadow-md">
+      <div class="max-w-lg px-8 py-8 bg-white rounded-xs shadow-md">
         <div class="flex flex-row items-center mb-6">
           <img src="/slipmat_logo_v3.png" class="w-10 h-10" alt="" />
           <h1 class="flex ml-2 text-3xl font-semibold text-gray-800">Slipmat Labs</h1>
